--- a/frontend/src/app/labels-list/labels-list.component.html
+++ b/frontend/src/app/labels-list/labels-list.component.html
@@ -1,8 +1,8 @@
-<div class="input-wrapper">
-  <div class="input-container">
+<section class="input-wrapper labels-section ml-5">
+  <div class="input-container ml-5">
     <input type="text" [(ngModel)]="newLabel" (keydown.enter)="addLabelButton()" placeholder="Enter label" />
   </div>
-  <div class="label-container">
+  <div class="label-container ">
     <span *ngFor="let label of labels" [ngStyle]="{'background-color': label.color}" class="label-tag" (click)="applyLabel(label)">
       {{ label.text }}
       <button (click)="removeLabelButton(label.text, $event)" class="remove-button">x</button>
@@ -11,4 +11,4 @@
   <div *ngIf="errorMessage" class="error-message">
     {{ errorMessage }}
   </div>
-</div>
+</section>
