--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -7,15 +7,14 @@ body {
 }
 
 h2 {
+    padding-left: 550px;
     color: #0070c0;
-    text-align: center;
     width: 100%;
 }
 
 .inputs-parameters-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
     margin: 0 0 0 0;
     background-color: #f5f6fa;
