--- a/frontend/src/app/file-upload/file-upload.component.html
+++ b/frontend/src/app/file-upload/file-upload.component.html
@@ -1,3 +1,3 @@
 <div class="mr-5">
-    <input class="form-control mr-5" type="file" id="formFile">
+    <input class="form-control mr-5" type="file" (change)="upload($event)" id="formFile">
 </div>
