--- a/frontend/src/app/selector-area/selector-area.component.html
+++ b/frontend/src/app/selector-area/selector-area.component.html
@@ -1,207 +1,10 @@
 <section>
-    <div (mouseup)="onMouseUp()">
-        <p class="mx-5 mt-2">So perhaps, you've generated some fancy text, and you're content that you can now copy and paste
-            your fancy text in
-            the comments section of funny cat videos, but perhaps you're wondering how it's even possible to change the
-            font
-            of
-            your text? Is it some sort of hack? Are you copying and pasting an actual font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            er creates fancy symbols. The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.So perhaps, you've generated some fancy text, and you're content that you
-            can
-            now
-            copy and paste your fancy text in the comments section of funny cat videos, but perhaps you're wondering how
-            it's
-            even possible to change the font of your text? Is it some sort of hack? Are you copying and pasting an
-            actual
-            font?
-            Well, the answer is actually no - rather than generating fancy fonts, this converter creates fancy symbols.
-            The
-            explanation starts with unicode; an industry standard which creates the specification for thousands of
-            different
-            symbols and characters. All the characters that you see on your electronic devices, and printed in books,
-            are
-            likely
-            specified by the unicode standard.</p>
-    </div>
-    <div class="flex justify-content-center gap-3 m-3">
-        <p-button label="Download" icon="pi pi-check" [loading]="loading" (onClick)="load()" />
-      </div>
-    </section>
+  <div (mouseup)="onMouseUp()">
+    <p class="mx-5 mt-2">
+      {{ documentContent }}
+    </p>
+  </div>
+  <div class="flex justify-content-center gap-3 m-3">
+    <p-button label="Download" icon="pi pi-check" [loading]="loading" (onClick)="load()" />
+  </div>
+</section>
